z-index fix for nav

--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@ nav {
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 30;
+  z-index: 10;
 }
 
 .logoContainer {
